фикс openapi.json
